# BlocksScreen

./: .gitignore  .pylintrc.dev  ATTRIBUTIONS.md  BlocksScreen.cfg  Blocks_Screen.code-workspace  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  UI_Resources.qrc  UI_Resources_rc.py  app.py  pyproject.toml  pytest.ini  requirements.txt
.blocksUIVenv/: pyvenv.cfg
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: branch-naming-check.yml  codeql.yml  dev-ci.yml  dev-test-code.yml  stage-ci.yml  test-code.yml
BlocksScreen/: BlocksScreen.py  configfile.py  configmanager.py  events.py  helper_methods.py  logger.py  logger_manager.py  manager.py  screensaver.py  udev.py  usb_automount.py  userauth.py
BlocksScreen/lib/: async_network_monitor.py  filament.py  files.py  logger_manager.py  machine.py  moonAPI.py  moonrakerComm.py  moonrest.py  network.py  (+3 more)
Qt UI/: Blocks_Screen_Lemos.ui
Qt_UI/: Blocks_Screen_Lemos.ui  Blocks_Screen_Lemos_ui.py  connectionWindow.ui  connectionWindow_ui.py
Scripts/: app.py  moonrakerComm.py  moonrest.py  socketcomm.py  uiTemplate.py  uiTemplate.ui  util.py
panels/: connectionWindow.py  controlTab.py  filamentTab.py  instructionsWindow.py  networkWindow.py  printTab.py  utilitiesTab.py
py_files/: Blocks_Screen_Lemos.py  resources.py
qt_ui/: Blocks_Screen_Lemos.ui  Blocks_Screen_Lemos_ui.py  connectionWindow.ui  connectionWindow_ui.py  controlStackedWidget.ui  controlStackedWidget_ui.py  customNumpad.ui  customNumpad_ui.py  filamentStackedWidget.ui  filamentStackedWidget_ui.py  instructionsWindow.ui  instructionsWindow_ui.py  printStackedWidget.ui  printStackedWidget_ui.py  ui_util.py  utilitiesStackedWidget.ui  utilitiesStackedWidget_ui.py  waitConfirmWindow.ui  waitConfirmWindow_ui.py  wifiConnectivityWindow.ui  wifiConnectivityWindow_ui.py
resources/: UI_Resources.qrc  UI_Resources_rc.py  UI_Resources_rc.py:Zone.Identifier  background_resources.qrc  background_resources_rc.py  button_resources.qrc  button_resources_rc.py  main_menu_resources.qrc  main_menu_resources_rc.py  system_resources.qrc  system_resources_rc.py  top_bar_resources_rc.py
scripts/: 99-usb-automount.rules  BlocksScreen-start.sh  BlocksScreen.desktop  BlocksScreen.service  dependencies_tracking.txt  dev-requirements.txt  events.py  flash_mcus.sh  helper.sh  hostname-helper.sh  install.sh  moonrakerComm.py  moonrest.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  set-hostname@.service  sudo-fix.sh  system-dependencies.json  udiskie.service  usb-automount.sh  util.py
tests/: button_try.py  conftest.py  random.py  test.py
tools/: .pylintrc
(+198 files in other folders)
