[project]
name = "BlocksScreen"
dynamic = ['version']
description = "GUI for BLOCKS Printers running Klipper"
authors = [
    { name = "Hugo do Carmo Costa", email = "hugo.santos.costa@gmail.com" },
]
dependencies = [
    'altgraph==0.17.4',
    'certifi==2024.7.4',
    'charset-normalizer==3.3.2',
    'idna==3.8',
    'numpy==2.1.0',
    'pefile==2023.2.7',
    'PyQt6==6.7.1',
    'PyQt6-Qt6==6.7.2',
    'PyQt6_sip==13.8.0',
    'requests==2.32.3',
    'sdbus==0.12.0',
    'sdbus-networkmanager==2.0.0',
    'typing==3.7.4.3',
    'websocket-client==1.8.0',
    'opencv-python-headless==4.11.0.86',
    'qrcode==8.2'
]
requires-python = ">=3.11.2"
readme = "README.md"
license = { text = "GNU Affero General Public License v3.0 or later" }
keywords = ["GUI", "klipper", "BlocksScreen", "BLOCKS"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
indent-style = "space"
line-ending = 'auto'
docstring-code-format = true
docstring-code-line-length = 94
