[project]
name = "BlocksScreen"
dynamic = ['version']
description = "GUI for BLOCKS Printers running Klipper"
authors = [
    { name = "Hugo do Carmo Costa", email = "hugo.santos.costa@gmail.com" },
]
maintainers = [
    { name = "Guilherme Costa", email = "guilherme.costa@blockstec.com" },
    { name = "Roberto Martins ", email = "roberto.martins@blockstec.com" },
]
dependencies = [
    'altgraph==0.17.4',
    'certifi==2025.10.5',
    'charset-normalizer==3.4.4',
    'idna==3.11',
    'numpy==2.3.4',
    'pefile==2024.8.26',
    'PyQt6==6.10.0',
    'PyQt6-Qt6==6.10.0',
    'PyQt6_sip==13.10.2',
    'requests>=2.32.5',
    'sdbus==0.14.1',
    'sdbus-networkmanager==2.0.0',
    'typing==3.7.4.3',
    'websocket-client==1.9.0',
    'opencv-python-headless==4.12.0.88',
    'qrcode==8.2',
]
requires-python = "==3.11.2"
readme = "README.md"
license = { text = "GNU Affero General Public License v3.0 or later" }
keywords = ["GUI", "klipper", "BlocksScreen", "BLOCKS"]

[project.optional-dependencies]
dev = ["ruff","pylint", "pytest", "pytest-cov", "docstr_coverage"]
stage = ["bandit"]
full-dev = ["BlockScreen[dev,stage]"]


[project.urls]
Homepage = "https://blockstec.com"
Issues = "https://github.com/BlocksTechnology/BlocksScreen/issues"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["F403"]

[tool.ruff.format]
indent-style = "space"
line-ending = 'auto'
docstring-code-format = true
docstring-code-line-length = 94

[tool.bandit]
exclude_dirs = ["tests", "BlocksScreen/lib/ui/resources/"]
